--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,6 @@ pytz==2019.1
 six==1.12.0
 SQLAlchemy==1.3.4
 Werkzeug==0.15.4
+gunicorn==19.9.0
+requests
 flask_cors
-flask_dance[sqla]
-flask_login
-blinker
