--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -26,5 +26,15 @@ spec:
               value: postgres.default.svc.cluster.local
             - name: DB_PORT
               value: "5432"
+            - name: GITHUB_CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: github
+                  key: client-id
+            - name: GITHUB_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: github
+                  key: client-secret
           ports:
             - containerPort: 80
